--- a/sports-pass.html
+++ b/sports-pass.html
@@ -43,7 +43,6 @@
                             '0%': { opacity: '0', transform: 'translateX(50px)' },
                             '100%': { opacity: '1', transform: 'translateX(0)' },
                         },
-                        // Keyframes for particle animation
                         particleFall: {
                             '0%': { transform: 'translateY(0px) translateX(0px)', opacity: 0.3 },
                             '100%': { transform: 'translateY(calc(100vh + 20px)) translateX(var(--end-x))', opacity: 0 }
@@ -222,7 +221,7 @@
             <ul class="hidden md:flex space-x-8">
                 <li><a href="index.html#home" class="font-medium relative group" style="color: var(--text-color);">Home<span class="absolute bottom-0 left-0 w-0 h-0.5 transition-all duration-300 group-hover:w-full" style="background-color: var(--color-primary-green);"></span></a></li>
                 <li><a href="index.html#services" class="font-medium relative group" style="color: var(--text-color);">Our Work<span class="absolute bottom-0 left-0 w-0 h-0.5 transition-all duration-300 group-hover:w-full" style="background-color: var(--color-primary-green);"></span></a></li>
-                <li><a href="sports-pass.html" class="font-medium relative group" style="color: var(--color-primary-orange);">Sports Pass<span class="absolute bottom-0 left-0 w-full h-0.5" style="background-color: var(--color-primary-orange);"></span></a></li>
+                <li><a href="sports-pass.html" class="font-medium relative group" style="color: var(--color-primary-orange);">Sports Pass<span class="absolute bottom-0 left-0 w-0 h-0.5 transition-all duration-300 group-hover:w-full" style="background-color: var(--color-primary-orange);"></span></a></li>
             </ul>
             <div class="flex items-center space-x-4">
                 <!-- Theme Toggle Button -->
@@ -324,7 +323,7 @@
             <p class="text-lg leading-relaxed mb-8" style="color: var(--secondary-text-color);">
                 Are you passionate about sports and looking for a unique investment opportunity? Join us as an owner and be a part of the future of sports entertainment! Fill out the form below to express your interest.
             </p>
-            <a href="#contact" class="inline-block px-8 py-4 font-bold rounded-full shadow-lg hover:shadow-xl transform hover:-translate-y-1 transition-all duration-300 animate-pulseGreen" style="background-color: var(--color-primary-green); color: var(--color-dark-bg);">
+            <a href="https://forms.gle/zHzXFXXgjDoNRS987" target="_blank" rel="noopener noreferrer" class="inline-block px-8 py-4 font-bold rounded-full shadow-lg hover:shadow-xl transform hover:-translate-y-1 transition-all duration-300 animate-pulseGreen" style="background-color: var(--color-primary-green); color: var(--color-dark-bg);">
                 Become an Owner
             </a>
         </div>
